Small spacing fix

--- a/main.css
+++ b/main.css
@@ -8,21 +8,21 @@ html, body {
 }
 
 .wrapper {
+	background-color: lightblue;
   display: flex;
   flex-direction: row;
-  width: 50%;
+  width: 40%;
 	min-width: 500px;
-  height: 80%;
 }
 
 .left, .right {
+	background-color: lightpink;
 	font-family: "Monaco", monospace;
   width: 50%;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 5px;
 }
 
 .left {
@@ -53,7 +53,7 @@ html, body {
 
 .social-links li {
   display: inline-block;
-  margin-right: 8px;
+  margin-right: 4px;
 }
 
 .social-links a {
